--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="carousel w-full ">
                 <!-- Slide One -->
                 <div id="slide1" class="carousel-item relative w-full">
-                    <img src="images/1.png" class="w-full" />
+                    <img src="1.png" class="w-full" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide4" class="btn btn-circle">❮</a>
                         <a href="#slide2" class="btn btn-circle">❯</a>
@@ -67,7 +67,7 @@
                 </div>
                 <!-- Slide Two -->
                 <div id="slide2" class="carousel-item relative w-full">
-                    <img src="images/4.png" class="w-full" />
+                    <img src="4.png" class="w-full" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide1" class="btn btn-circle">❮</a>
                         <a href="#slide3" class="btn btn-circle">❯</a>
@@ -166,7 +166,7 @@
 
                 <!-- Card one -->
                 <div class="card bg-base-100 shadow-xl image-full">
-                    <figure><img src="images/2.png" alt="Shoes" />
+                    <figure><img src="2.png" alt="Shoes" />
                     </figure>
                     <div class="card-body">
                         <h2 class="card-title text-white lg:mt-36">Junior Program</h2>
@@ -180,7 +180,7 @@
                 </div>
                 <!-- Card Two -->
                 <div class="card bg-base-100 shadow-xl image-full">
-                    <figure><img src="images/3.png" alt="Shoes" />
+                    <figure><img src="3.png" alt="Shoes" />
                     </figure>
                     <div class="card-body">
                         <h2 class="card-title text-white lg:mt-36">Teenager Program</h2>
@@ -202,7 +202,7 @@
             <!-- Card Three -->
             <div class="grid grid-cols-1 lg:grid-cols-1">
                 <div class="card col-span-2 bg-base-100 shadow-xl image-full">
-                    <figure><img src="images/4.png" alt="Shoes" />
+                    <figure><img src="4.png" alt="Shoes" />
                     </figure>
                     <div class="card-body">
                         <h2 class="card-title text-white lg:mt-36">Professional Program</h2>
@@ -238,7 +238,7 @@
                 <!-- Card One Starts Here -->
                 <div class="hero">
                     <div class="hero-content flex-col lg:flex-row">
-                        <img src="images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+                        <img src="5.png" class="max-w-sm rounded-lg shadow-2xl" />
                         <div>
                             <i class="fa-solid fa-star text-amber-400"> 5.0 </i>
                             <i class="fa-regular fa-eye"> 20 </i>
@@ -257,7 +257,7 @@
                 <!-- Card Two Starts Here -->
                 <div class="hero">
                     <div class="hero-content flex-col lg:flex-row">
-                        <img src="images/6.png" class="max-w-sm rounded-lg shadow-2xl" />
+                        <img src="6.png" class="max-w-sm rounded-lg shadow-2xl" />
                         <div>
                             <i class="fa-solid fa-star text-amber-400"> 5.0 </i>
                             <i class="fa-regular fa-eye"> 20 </i>
@@ -276,7 +276,7 @@
                 <!-- Card Three Starts Here -->
                 <div class="hero">
                     <div class="hero-content flex-col lg:flex-row">
-                        <img src="images/7.png" class="max-w-sm rounded-lg shadow-2xl" />
+                        <img src="7.png" class="max-w-sm rounded-lg shadow-2xl" />
                         <div>
                             <i class="fa-solid fa-star text-amber-400"> 5.0 </i>
                             <i class="fa-regular fa-eye"> 20 </i>
@@ -295,7 +295,7 @@
                 <!-- Card Four Starts Here -->
                 <div class="hero">
                     <div class="hero-content flex-col lg:flex-row">
-                        <img src="images/8.png" class="max-w-sm rounded-lg shadow-2xl" />
+                        <img src="8.png" class="max-w-sm rounded-lg shadow-2xl" />
                         <div>
                             <i class="fa-solid fa-star text-amber-400"> 5.0 </i>
                             <i class="fa-regular fa-eye"> 20 </i>
@@ -314,7 +314,7 @@
                 <!-- Card Five Starts Here -->
                 <div class="hero">
                     <div class="hero-content flex-col lg:flex-row">
-                        <img src="images/9.png" class="max-w-sm rounded-lg shadow-2xl" />
+                        <img src="9.png" class="max-w-sm rounded-lg shadow-2xl" />
                         <div>
                             <i class="fa-solid fa-star text-amber-400"> 5.0 </i>
                             <i class="fa-regular fa-eye"> 20 </i>
@@ -333,7 +333,7 @@
                 <!-- Card Six Starts Here -->
                 <div class="hero">
                     <div class="hero-content flex-col lg:flex-row">
-                        <img src="images/10.png" class="max-w-sm rounded-lg shadow-2xl" />
+                        <img src="10.png" class="max-w-sm rounded-lg shadow-2xl" />
                         <div>
                             <i class="fa-solid fa-star text-amber-400"> 5.0 </i>
                             <i class="fa-regular fa-eye"> 20 </i>
@@ -369,7 +369,7 @@
             <div>
                 <div class="hero">
                     <div class="hero-content flex-col lg:flex-row">
-                        <img src="images/11.png" class=" w-1/2  lg:max-w-sm rounded-lg shadow-2xl" />
+                        <img src="11.png" class=" w-1/2  lg:max-w-sm rounded-lg shadow-2xl" />
                         <div>
                             <div class="collapse collapse-plus ">
                                 <input type="radio" name="my-accordion-3" checked="checked" />
@@ -441,7 +441,7 @@
                     <div class="max-w-96 p-14 border-gray border-2 rounded-md ">
 
                         <div class="bg-[#fddd5f78] rounded-md p-4 mb-2">
-                            <img src="Images/Group 1171275317.png" alt="" srcset="">
+                            <img src="Group 1171275317.png" alt="" srcset="">
 
                             <p>Phone Number : </p>
                             <h4 class="text-black">(+62) 123-321-543</h4>
@@ -449,14 +449,14 @@
                         </div>
 
                         <div class="bg-[#fddd5f78] rounded-md p-4 mb-2">
-                            <img src="Images/Group 1171275318.png" alt="" srcset="">
+                            <img src="Group 1171275318.png" alt="" srcset="">
 
                             <p>Email :</p>
                             <h4 class="text-black">hockeys@support.com</h4>
 
                         </div>
                         <div class="bg-[#fddd5f78] rounded-md p-4 mb-2">
-                            <img src="Images/Group 1171275321.png" alt="" srcset="">
+                            <img src="Group 1171275321.png" alt="" srcset="">
 
                             <p>Location : </p>
                             <h4 class="text-black">152/1 Mohakhali Wireless Gate</h4>
@@ -509,10 +509,10 @@
             <div class="social container mx-auto text-center bg-gray-100 rounded-lg p-6">
                 <h2 class="text-black text-lg font-bold">Social Media</h2>
                 <div class="space-x-4 flex justify-center mt-4">
-                    <img src="Images/Facebook.png" alt="">
-                    <img src="Images/Instagram.png" alt="">
-                    <img src="Images/Linkedin.png" alt="">
-                    <img src="Images/Twitter.png" alt="">
+                    <img src="Facebook.png" alt="">
+                    <img src="Instagram.png" alt="">
+                    <img src="Linkedin.png" alt="">
+                    <img src="Twitter.png" alt="">
                 </div>
             </div>
 
